[package]
name = "s2n-netbench-cli"
version = "0.1.1"
authors = ["AWS s2n"]
description = "Internal crate used by s2n-netbench"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"

[dependencies]
handlebars = "4"
netbench = { version = "0.1", path = "../netbench", package = "s2n-netbench" }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"

[[bin]]
name = "s2n-netbench"
path = "src/main.rs"
