[package]
name = "s2n-netbench-collector"
version = "0.1.0"
authors = ["AWS s2n"]
description = "Internal crate used by s2n-netbench"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"

[dependencies]
handlebars = "4"
netbench = { version = "0.1", path = "../netbench", package = "s2n-netbench" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
sysinfo = "0.29"
