[package]
name = "s2n-netbench-driver-native-tls"
version = "0.1.0"
authors = ["AWS s2n"]
description = "s2n-netbench driver for native tls"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
netbench = { version = "0.1", path = "../netbench", package = "s2n-netbench" }
netbench-driver = { version = "0.1", path = "../netbench-driver", package = "s2n-netbench-driver" }
tokio = { version = "1", features = ["io-util", "net", "time", "rt-multi-thread"] }
tokio-native-tls = "0.3"
# Build the vendored version to make it easy to test in dev
#
# NOTE: The version of the `openssl-sys` crate is not the same as OpenSSL itself.
#       Versions 1.0.1 - 3.0.0 are automatically discovered.
openssl-sys = { version = "0.9", features = ["vendored"] }

[[bin]]
name = "s2n-netbench-driver-client-native-tls"
path = "src/bin/client.rs"

[[bin]]
name = "s2n-netbench-driver-server-native-tls"
path = "src/bin/server.rs"
