[package]
name = "s2n-netbench-driver"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
mimalloc = { version = "0.1", default-features = false }
netbench = { version = "0.1", path = "../netbench", package = "s2n-netbench" }
probe = "0.5"
tokio = { version = "1", features = ["io-util", "net", "time", "rt-multi-thread"] }
