[package]
name = "s2n-netbench-orchestrator"
version = "0.1.0"
authors = ["AWS s2n"]
description = "Utility to automate s2n-netbench runs"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[[bin]]
name = "russula_cli"
path = "src/russula_cli.rs"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
structopt = { version = "0.3.26", default-features = false }
bytes = "1.4.0"
humantime = "2.1.0"
sysinfo = "0.29.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1.40"
paste = "1.0.14"

[dev-dependencies]
futures = "0.3"
