[package]
name = "s2n-netbench-orchestrator"
version = "0.1.0"
authors = ["AWS s2n"]
description = "Utility to automate s2n-netbench runs"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[[bin]]
name = "russula_cli"
path = "src/russula_cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tracing = "0.1"
