[package]
name = "s2n-netbench-orchestrator"
version = "0.1.0"
authors = ["AWS s2n"]
description = "Utility to automate s2n-netbench runs"
repository = "https://github.com/aws/s2n-netbench"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[[bin]]
name = "s2n-netbench-orchestrator"
path = "src/main.rs"

[[bin]]
name = "russula_cli"
path = "src/russula_cli.rs"

[dependencies]
aws-sdk-s3 = "1"
bytes = "1"
humantime = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
sysinfo = "0.29"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
futures = "0.3"
