[package]
name = "s2n-netbench"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
description = "An efficiency, performance, and correctness analysis tool for transport protocols."
repository = "https://github.com/aws/s2n-netbench"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"

[features]
builder = ["dep:openssl", "dep:rcgen"]

[dependencies]
base64 = "0.13"
bytes = "1"
enum-primitive-derive = "0.3"
futures = "0.3"
humansize = "1"
humantime = "2"
num-traits = "0.2"
once_cell = "1"
# openssl deprecated the old pkcs builder and added a new preferred function
# inside of patch versions, so we explicitly require at least patch
openssl = { version = "0.10.46", optional = true }
probe = "0.5"
rcgen = { version = "0.11", optional = true }
s2n-quic-core = { version = "0.32.0", features = ["testing"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "rt", "time"] }

[dev-dependencies]
futures-test = "0.3"
insta = { version = "1", features = ["json"] }
tokio = { version = "1", features = ["io-util", "net", "test-util", "time"] }
